--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <html>
-    <head>
-        <title>
-            Jhonny Deep
-        </title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>Welcome To</h1>
-        <h2>Jonny Deep's Website</h2>
-    </body>
+
+<head>
+    <title>
+        Jhonny Deep
+    </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <section class="background">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h2> <span>Jonny Deep</span>'s Website</h2>
+            <h3>John Christopher Depp II is an American actor, producer and musician.</h3>
+            <p>John Christopher "Johnny" Depp II was born on June 9, 1963 in Owensboro, Kentucky to Betty Sue Palmer
+                (née
+                Wells), a waitress & John Christopher Depp, a civil engineer. Depp was raised in Florida. He dropped out
+                of
+                school when he was 15, and fronted a series of music-garage bands, including one named 'The Kids.</p>
+            <a class="link-button" href="www.google.com">google</a>
+        </div>
+        <div class="half-width">
+            <img src="jhonny deep/01.jpg" alt="">
+        </div>
+    </section>
+</body>
+
 </html>
