--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
             <img src="jhonny deep/01.jpg" alt="">
         </div>
     </section>
+    <section class="second">
+        <div class="half-width">
+            <img src="jhonny deep/02.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Jhonny deep</h2>
+            <h3>a actor</h3>
+            <p>John Christopher Depp II is an American actor, producer and musician. He is the recipient of multiple
+                accolades, including a Golden Globe Award and a Screen Actors Guild Award, in addition to nominations
+                for three Academy Awards and two BAFTA awards.</p>
+            <a class="link-button" target="_blank" href="www.myressume.com">Download ressume</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
