style-add-footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="background">
+    <section class="background flex-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h2> <span>Jonny Deep</span>'s Website</h2>
@@ -27,7 +27,7 @@
             <img src="jhonny deep/01.jpg" alt="">
         </div>
     </section>
-    <section class="second">
+    <section class="second flex-container">
         <div class="half-width">
             <img src="jhonny deep/02.jpg" alt="">
         </div>
@@ -41,6 +41,33 @@
         </div>
 
     </section>
+    <section class="Experience">
+        <h1>Experience</h1>
+        <div class="flex-container">
+            <div id="full-stack" class="Experience-item">
+                <h2>full stack developer</h2>
+                <h3><span>2022-present|pro level developer</span></h3>
+                <p>Other distributions usually follow provided by the community (big “Thank you!” for that!). If you
+                    want to
+                    provide some, make sure to announce in the forums such that we can put it on the official C::B
+                    homepage
+                </p>
+            </div>
+            <div id="baby" class="Experience-item">
+                <h2>baby stack developer</h2>
+                <h3><span>2020-2022|programming hero lerner</span></h3>
+                <p>wnload the binary release
+                    This is the easy way for installing Code::Blocks. Download the setup file, run it on your computer
+                    and
+                    Code::Blocks will be installed, ready for you to work with it. Can’t get any easier than that!</p>
+            </div>
+
+        </div>
+
+    </section>
 </body>
+<footer>
+    <p>thank you</p>
+</footer>
 
 </html>
